src/main/gen/is/yarr/clips/parser/CLIPSParser.java
// This is a generated file. Not intended for manual editing.
package is.yarr.clips.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static is.yarr.clips.psi.CLIPSTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CLIPSParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return File(b, l + 1);
  }

  /* ********************************************************** */
  // item*
  static boolean File(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "File")) return false;
    while (true) {
      int c = current_position_(b);
      if (!item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "File", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "and" conditional_element+ RPAREN
  static boolean and_ce(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_ce")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "and");
    p = r; // pin = 2
    r = r && report_error_(b, and_ce_2(b, l + 1));
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // conditional_element+
  private static boolean and_ce_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_ce_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = conditional_element(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!conditional_element(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_ce_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // not_constraint (AMPERSAND not_constraint)*
  static boolean and_constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_constraint")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = not_constraint(b, l + 1);
    r = r && and_constraint_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (AMPERSAND not_constraint)*
  private static boolean and_constraint_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_constraint_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_constraint_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_constraint_1", c)) break;
    }
    return true;
  }

  // AMPERSAND not_constraint
  private static boolean and_constraint_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_constraint_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AMPERSAND);
    r = r && not_constraint(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // variable_element "<-" pattern_ce
  static boolean assigned_pattern_CE(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assigned_pattern_CE")) return false;
    if (!nextTokenIs(b, VARIABLE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = variable_element(b, l + 1);
    p = r; // pin = 1
    r = r && report_error_(b, consumeToken(b, "<-"));
    r = p && pattern_ce(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // LPAREN "cardinality" cardinality_specification cardinality_specification RPAREN
  public static boolean cardinality_constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality_constraint")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CARDINALITY_CONSTRAINT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "cardinality");
    p = r; // pin = 2
    r = r && report_error_(b, cardinality_specification(b, l + 1));
    r = p && report_error_(b, cardinality_specification(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // NUMBER | VARIABLE
  public static boolean cardinality_specification(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cardinality_specification")) return false;
    if (!nextTokenIs(b, "<cardinality specification>", NUMBER, VARIABLE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CARDINALITY_SPECIFICATION, "<cardinality specification>");
    r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, VARIABLE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean class_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "class_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CLASS_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // assigned_pattern_CE | pattern_ce | test_ce | and_ce | or_ce | not_ce | exists_ce | forall_ce | logical_ce
  static boolean conditional_element(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "conditional_element")) return false;
    if (!nextTokenIs(b, "", LPAREN, VARIABLE)) return false;
    boolean r;
    r = assigned_pattern_CE(b, l + 1);
    if (!r) r = pattern_ce(b, l + 1);
    if (!r) r = test_ce(b, l + 1);
    if (!r) r = and_ce(b, l + 1);
    if (!r) r = or_ce(b, l + 1);
    if (!r) r = not_ce(b, l + 1);
    if (!r) r = exists_ce(b, l + 1);
    if (!r) r = forall_ce(b, l + 1);
    if (!r) r = logical_ce(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // STRING | NUMBER | IDENTIFIER | "crlf" | "t" | "TRUE" | "FALSE" | "nil"
  public static boolean constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constant")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTANT, "<constant>");
    r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, "crlf");
    if (!r) r = consumeToken(b, "t");
    if (!r) r = consumeToken(b, "TRUE");
    if (!r) r = consumeToken(b, "FALSE");
    if (!r) r = consumeToken(b, "nil");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // or_constraint
  public static boolean constraint(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONSTRAINT, "<constraint>");
    r = or_constraint(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // type_constraint
  //                        | range_constraint
  //                        | cardinality_constraint
  public static boolean constraint_attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "constraint_attribute")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = type_constraint(b, l + 1);
    if (!r) r = range_constraint(b, l + 1);
    if (!r) r = cardinality_constraint(b, l + 1);
    exit_section_(b, m, CONSTRAINT_ATTRIBUTE, r);
    return r;
  }

  /* ********************************************************** */
  // defrule_construct
  //             | deftemplate_construct
  //             | deffacts_construct
  //             | defglobal_construct
  //             | deffunction_construct
  //             | defmodule_construct
  //             | defclass_construct
  public static boolean construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = defrule_construct(b, l + 1);
    if (!r) r = deftemplate_construct(b, l + 1);
    if (!r) r = deffacts_construct(b, l + 1);
    if (!r) r = defglobal_construct(b, l + 1);
    if (!r) r = deffunction_construct(b, l + 1);
    if (!r) r = defmodule_construct(b, l + 1);
    if (!r) r = defclass_construct(b, l + 1);
    exit_section_(b, m, CONSTRUCT, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN "declare" rule_property+ RPAREN
  static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "declare");
    r = r && declaration_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // rule_property+
  private static boolean declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = rule_property(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!rule_property(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "declaration_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean def_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "def_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEF_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN "default" expression* RPAREN
  //                     | LPAREN "default-dynamic" expression* RPAREN
  public static boolean default_attribute(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_attribute")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = default_attribute_0(b, l + 1);
    if (!r) r = default_attribute_1(b, l + 1);
    exit_section_(b, m, DEFAULT_ATTRIBUTE, r);
    return r;
  }

  // LPAREN "default" expression* RPAREN
  private static boolean default_attribute_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_attribute_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "default");
    r = r && default_attribute_0_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression*
  private static boolean default_attribute_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_attribute_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "default_attribute_0_2", c)) break;
    }
    return true;
  }

  // LPAREN "default-dynamic" expression* RPAREN
  private static boolean default_attribute_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_attribute_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "default-dynamic");
    r = r && default_attribute_1_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // expression*
  private static boolean default_attribute_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_attribute_1_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "default_attribute_1_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "defclass" class_name [STRING]
  //                          ["is-a" def_name+]
  //                          slot_definition*
  //                        RPAREN
  public static boolean defclass_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFCLASS_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "defclass");
    p = r; // pin = 2
    r = r && report_error_(b, class_name(b, l + 1));
    r = p && report_error_(b, defclass_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, defclass_construct_4(b, l + 1)) && r;
    r = p && report_error_(b, defclass_construct_5(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [STRING]
  private static boolean defclass_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct_3")) return false;
    consumeToken(b, STRING);
    return true;
  }

  // ["is-a" def_name+]
  private static boolean defclass_construct_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct_4")) return false;
    defclass_construct_4_0(b, l + 1);
    return true;
  }

  // "is-a" def_name+
  private static boolean defclass_construct_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "is-a");
    r = r && defclass_construct_4_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // def_name+
  private static boolean defclass_construct_4_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct_4_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = def_name(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!def_name(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defclass_construct_4_0_1", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  // slot_definition*
  private static boolean defclass_construct_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defclass_construct_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!slot_definition(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defclass_construct_5", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "deffacts" deffacts_name [STRING] deffacts_rhs_pattern* RPAREN
  public static boolean deffacts_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFFACTS_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "deffacts");
    p = r; // pin = 2
    r = r && report_error_(b, deffacts_name(b, l + 1));
    r = p && report_error_(b, deffacts_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, deffacts_construct_4(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [STRING]
  private static boolean deffacts_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_construct_3")) return false;
    consumeToken(b, STRING);
    return true;
  }

  // deffacts_rhs_pattern*
  private static boolean deffacts_construct_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_construct_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!deffacts_rhs_pattern(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deffacts_construct_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean deffacts_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEFFACTS_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN def_name expression* RPAREN
  public static boolean deffacts_rhs_pattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_rhs_pattern")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && def_name(b, l + 1);
    r = r && deffacts_rhs_pattern_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, DEFFACTS_RHS_PATTERN, r);
    return r;
  }

  // expression*
  private static boolean deffacts_rhs_pattern_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffacts_rhs_pattern_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deffacts_rhs_pattern_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "deffunction" deffunction_name [STRING]
  //                             LPAREN parameter_list [MULTIFIELD_VARIABLE] RPAREN
  //                             rhs_action*
  //                           RPAREN
  public static boolean deffunction_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffunction_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFFUNCTION_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "deffunction");
    p = r; // pin = 2
    r = r && report_error_(b, deffunction_name(b, l + 1));
    r = p && report_error_(b, deffunction_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, LPAREN)) && r;
    r = p && report_error_(b, parameter_list(b, l + 1)) && r;
    r = p && report_error_(b, deffunction_construct_6(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RPAREN)) && r;
    r = p && report_error_(b, deffunction_construct_8(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [STRING]
  private static boolean deffunction_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffunction_construct_3")) return false;
    consumeToken(b, STRING);
    return true;
  }

  // [MULTIFIELD_VARIABLE]
  private static boolean deffunction_construct_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffunction_construct_6")) return false;
    consumeToken(b, MULTIFIELD_VARIABLE);
    return true;
  }

  // rhs_action*
  private static boolean deffunction_construct_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffunction_construct_8")) return false;
    while (true) {
      int c = current_position_(b);
      if (!rhs_action(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deffunction_construct_8", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean deffunction_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deffunction_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEFFUNCTION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // global_variable_def "=" expression
  static boolean defglobal_assignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defglobal_assignment")) return false;
    if (!nextTokenIs(b, GLOBAL_VARIABLE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = global_variable_def(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && expression(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LPAREN "defglobal" [IDENTIFIER] defglobal_assignment* RPAREN
  public static boolean defglobal_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defglobal_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFGLOBAL_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "defglobal");
    p = r; // pin = 2
    r = r && report_error_(b, defglobal_construct_2(b, l + 1));
    r = p && report_error_(b, defglobal_construct_3(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [IDENTIFIER]
  private static boolean defglobal_construct_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defglobal_construct_2")) return false;
    consumeToken(b, IDENTIFIER);
    return true;
  }

  // defglobal_assignment*
  private static boolean defglobal_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defglobal_construct_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!defglobal_assignment(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defglobal_construct_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "defmodule" module_name comment? port_specification* RPAREN
  public static boolean defmodule_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defmodule_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFMODULE_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "defmodule");
    p = r; // pin = 2
    r = r && report_error_(b, module_name(b, l + 1));
    r = p && report_error_(b, defmodule_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, defmodule_construct_4(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // comment?
  private static boolean defmodule_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defmodule_construct_3")) return false;
    consumeToken(b, COMMENT);
    return true;
  }

  // port_specification*
  private static boolean defmodule_construct_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defmodule_construct_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!port_specification(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defmodule_construct_4", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "defrule" rule_name [STRING]
  //                         [declaration]
  //                         conditional_element*
  //                         "=>"
  //                         rhs_action*
  //                       RPAREN
  public static boolean defrule_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defrule_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFRULE_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "defrule");
    p = r; // pin = 2
    r = r && report_error_(b, rule_name(b, l + 1));
    r = p && report_error_(b, defrule_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, defrule_construct_4(b, l + 1)) && r;
    r = p && report_error_(b, defrule_construct_5(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, "=>")) && r;
    r = p && report_error_(b, defrule_construct_7(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [STRING]
  private static boolean defrule_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defrule_construct_3")) return false;
    consumeToken(b, STRING);
    return true;
  }

  // [declaration]
  private static boolean defrule_construct_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defrule_construct_4")) return false;
    declaration(b, l + 1);
    return true;
  }

  // conditional_element*
  private static boolean defrule_construct_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defrule_construct_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!conditional_element(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defrule_construct_5", c)) break;
    }
    return true;
  }

  // rhs_action*
  private static boolean defrule_construct_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defrule_construct_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!rhs_action(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "defrule_construct_7", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN "deftemplate" template_name (COMMENT)? slot_definition* RPAREN
  public static boolean deftemplate_construct(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftemplate_construct")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, DEFTEMPLATE_CONSTRUCT, null);
    r = consumeToken(b, LPAREN);
    r = r && consumeToken(b, "deftemplate");
    p = r; // pin = 2
    r = r && report_error_(b, template_name(b, l + 1));
    r = p && report_error_(b, deftemplate_construct_3(b, l + 1)) && r;
    r = p && report_error_(b, deftemplate_construct_4(b, l + 1)) && r;
    r = p && consumeToken(b, RPAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // (COMMENT)?
  private static boolean deftemplate_construct_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftemplate_construct_3")) return false;
    consumeToken(b, COMMENT);
    return true;
  }

  // slot_definition*
  private static boolean deftemplate_construct_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftemplate_construct_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!slot_definition(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "deftemplate_construct_4", c)) break;
    }
    return true;
  }
